--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,10 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/blaserlab/universe
 	shallow = true
 	branch = HEAD
+[submodule "blaseRtemplates"]
+	path = blaseRtemplates
+	url = https://github.com/blaserlab/blaseRtemplates
+	shallow = true
+	registered = true
