--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,43 @@
 	url = https://github.com/blaserlab/blaseRtools
 	shallow = true
 	registered = true
+[submodule "CellChat"]
+	path = CellChat
+	url = https://github.com/sqjin/CellChat
+	shallow = true
+	registered = false
+[submodule "DoubletFinder"]
+	path = DoubletFinder
+	url = https://github.com/chris-mcginnis-ucsf/DoubletFinder
+	shallow = true
+	registered = false
+[submodule "SeuratData"]
+	path = SeuratData
+	url = https://github.com/satijalab/seurat-data
+	shallow = true
+	registered = false
+[submodule "SeuratDisk"]
+	path = SeuratDisk
+	url = https://github.com/mojaveazure/seurat-disk
+	shallow = true
+	registered = false
+[submodule "blaseRdata"]
+	path = blaseRdata
+	url = https://github.com/blaserlab/blaseRdata
+	shallow = true
+	registered = false
+[submodule "ggrastr"]
+	path = ggrastr
+	url = https://github.com/VPetukhov/ggrastr
+	shallow = true
+	registered = false
+[submodule "leidenbase"]
+	path = leidenbase
+	url = https://github.com/cole-trapnell-lab/leidenbase
+	shallow = true
+	registered = false
+[submodule "monocle3"]
+	path = monocle3
+	url = https://github.com/cole-trapnell-lab/monocle3
+	shallow = true
+	registered = false
