--- a/.gitmodules
+++ b/.gitmodules
@@ -28,6 +28,11 @@
 	url = https://github.com/blaserlab/genotyping.functions
 	shallow = true
 	registered = true
+[submodule "CIPR"]
+	path = CIPR
+	url = https://github.com/atakanekiz/CIPR-Package
+	shallow = true
+	registered = false
 [submodule "CellChat"]
 	path = CellChat
 	url = https://github.com/sqjin/CellChat
@@ -36,6 +41,11 @@
 [submodule "DoubletFinder"]
 	path = DoubletFinder
 	url = https://github.com/chris-mcginnis-ucsf/DoubletFinder
+	shallow = true
+	registered = false
+[submodule "Nebulosa"]
+	path = Nebulosa
+	url = https://github.com/powellgenomicslab/Nebulosa
 	shallow = true
 	registered = false
 [submodule "SeuratData"]
@@ -48,9 +58,24 @@
 	url = https://github.com/mojaveazure/seurat-disk
 	shallow = true
 	registered = false
+[submodule "SeuratWrappers"]
+	path = SeuratWrappers
+	url = https://github.com/satijalab/seurat-wrappers
+	shallow = true
+	registered = false
+[submodule "conos"]
+	path = conos
+	url = https://github.com/hms-dbmi/conos
+	shallow = true
+	registered = false
 [submodule "ggrastr"]
 	path = ggrastr
 	url = https://github.com/VPetukhov/ggrastr
+	shallow = true
+	registered = false
+[submodule "harmony"]
+	path = harmony
+	url = https://github.com/immunogenomics/harmony
 	shallow = true
 	registered = false
 [submodule "leidenbase"]
@@ -61,5 +86,26 @@
 [submodule "monocle3"]
 	path = monocle3
 	url = https://github.com/cole-trapnell-lab/monocle3
+	shallow = true
+	registered = false
+[submodule "presto"]
+	path = presto
+	url = https://github.com/immunogenomics/presto
+	shallow = true
+	registered = false
+[submodule "rliger"]
+	path = rliger
+	url = https://github.com/welch-lab/liger
+	shallow = true
+	registered = false
+[submodule "schex"]
+	path = schex
+	url = https://github.com/SaskiaFreytag/schex
+	shallow = true
+	branch = 031320d
+	registered = false
+[submodule "velocyto.R"]
+	path = velocyto.R
+	url = https://github.com/velocyto-team/velocyto.R
 	shallow = true
 	registered = false
