--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,8 @@
 	url = https://github.com/blaserlab/monocle3
 	shallow = true
 	registered = false
+[submodule "speedglm"]
+	path = speedglm
+	url = https://github.com/MarcoEnea/speedglm
+	shallow = true
+	registered = false
